Logger added to the relevant classes